--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,19 @@
-absl-py==1.3.0
-astunparse==1.6.3
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blis==0.7.9
-build==0.9.0
-cachetools==5.2.1
-catalogue==2.0.8
-certifi==2022.12.7
-charset-normalizer==2.1.1
-click==8.1.3
-commonmark==0.9.1
-confection==0.0.3
-contourpy==1.0.6
 corextopic==1.1
-cycler==0.11.0
-cymem==2.0.7
-docutils==0.19
-flatbuffers==23.1.4
-fonttools==4.38.0
-fst-pso==1.8.1
-FuzzyTM==2.0.5
-gast==0.4.0
-gensim==4.3.0
-google-auth==2.16.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.51.1
-h5py==3.7.0
-idna==3.4
-importlib-metadata==6.0.0
-jaraco.classes==3.2.3
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.11.0
-keyring==23.13.1
-kiwisolver==1.4.4
-langcodes==3.3.0
-libclang==15.0.6.1
-Markdown==3.4.1
-MarkupSafe==2.1.1
+ipython==8.8.0
+keras==2.10.0
+lightgbm==3.2.1
 matplotlib==3.6.2
-miniful==0.0.6
-more-itertools==9.0.0
-murmurhash==1.0.9
 nltk==3.8.1
 numpy==1.24.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.0
 pandas==1.5.2
-pathy==0.10.1
-pep517==0.13.0
-Pillow==9.4.0
-pip-tools==6.12.1
-pkginfo==1.9.6
-preshed==3.0.8
-protobuf==3.19.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==1.10.4
-pyFUME==0.2.25
-Pygments==2.14.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7
-readme-renderer==37.3
-regex==2022.10.31
-requests==2.28.1
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-rfc3986==2.0.0
-rich==13.0.1
-rsa==4.9
-scikit-learn==1.2.0
-scipy==1.10.0
+plotly==5.9.0
+python_Levenshtein==0.20.9
+scikit_learn==1.2.0
+scikit_optimize==0.9.0
+scipy==1.9.3
 seaborn==0.12.2
-simpful==2.9.0
-six==1.16.0
-smart-open==6.3.0
-soupsieve==2.3.2.post1
-spacy==3.4.4
-spacy-legacy==3.0.11
-spacy-loggers==1.0.4
-srsly==2.4.5
-summa==1.2.0
-summarization==0.0.1
-tensorboard==2.11.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.29.0
-termcolor==2.2.0
+setuptools==65.5.0
+shap==0.41.0
 textblob==0.17.1
-thinc==8.1.6
-threadpoolctl==3.1.0
-tomli==2.0.1
-tqdm==4.64.1
-twine==4.0.2
-typer==0.7.0
-typing_extensions==4.4.0
-urllib3==1.26.13
-wasabi==0.10.1
-webencodings==0.5.1
-Werkzeug==2.2.2
+tweedie==0.0.9
 wordcloud==1.8.2.2
-wrapt==1.14.1
-zipp==3.11.0
