--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-corextopic==1.1
-ipython==8.8.0
-keras==2.11.0
-lightgbm==3.2.1
-matplotlib==3.6.2
-nltk==3.8.1
-numpy==1.24.1
-pandas==1.5.2
-plotly==5.9.0
-python_Levenshtein==0.20.9
-scikit_learn==1.2.1
-scikit_optimize==0.9.0
-scipy==1.10.0
-seaborn==0.12.2
-setuptools==64.0.2
-shap==0.41.0
-textblob==0.17.1
-tweedie==0.0.9
-wordcloud==1.8.2.2
+corextopic>=1.1
+ipython>=8.7.0
+lightgbm>=3.2.1
+matplotlib>=3.6.2
+nltk>=3.8.1
+numpy>=1.24.1
+pandas>=1.5.2
+plotly>=5.9.0
+python_Levenshtein>=0.20.9
+scikit_learn>=1.2.1
+scikit_optimize>=0.9.0
+scipy>=1.10.0
+seaborn>=0.12.2
+shap>=0.41.0
+textblob>=0.17.1
+tweedie>=0.0.9
+wordcloud>=1.8.2.2
+tensorflow>=2.11.0
